--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,21 @@
   --primary-white: #fff;
   --primary-orange: #f9ab00;
   --primary-dark: rgba(255,255,255,0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
-
-body {
-  font-family: "Roboto Condensed" sans-serif;
-}
-
-/*** NAVBAR ***/
 
 /*** MENU LINKS ***/
-nav a.nav-link {
+.nav {
+  z-index: 2;
+}
+
+.nav a.nav-link {
   letter-spacing: 0.0375rem;
   cursor: pointer;
 }
 
-nav ul li {
+.nav ul li {
   text-transform: uppercase;
 }
 
@@ -27,6 +27,7 @@ nav ul li {
   margin-left: 0.75rem;
   color: var(--primary-white) !important;
   border-top:.1875rem solid var(--primary-dark);
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .navbar-brand {
@@ -41,4 +42,97 @@ nav ul li {
 
 .navbar-nav > li > a:hover {
   border-top: .1875rem solid var(--primary-orange);
+}
+
+
+@media(max-width: 768px) {
+  .navbar-brand img {
+    width: 90%;
+    height: 75%;
+  }
+
+}
+
+/*** HEADER ***/
+.header-wrapper {
+  position: relative;
+  background: url(home-background.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+@media(max-width: 768px) {
+  .main-info {
+    font-size: 1.7rem !important;
+  }
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+}
+
+/*** TYPED TEXT ***/
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+
+/*** MAIN OFFER BUTTON ***/
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: .625rem .75rem .75rem .75rem;
+  color: var(--primary-white);
+  margin: 2rem;
+  z-index: 2;
+}
+
+.btn-main-offer:hover {
+  color: var(--primary-white);
+  background-color: var(--primary-hover-red);
+  transition: .1s ease-in-out;
+  text-decoration: none;
+
+}
+
+@media(max-width: 768px) {
+  .btn-main-offer {
+    font-size: 1rem;
+  }
+}
+
+/*** PARTICLES ***/
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vh;
+  z-index: 1;
+}
+
+@media(max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
 }
