updated about me. notes: unfinished bio and particles overlapping navbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   --primary-hover-red: #f33501;
 }
 
+body {
+  font-family: "Roboto Condensed", sans-serif !important;
+}
+
 /*** MENU LINKS ***/
 .nav {
   z-index: 2;
@@ -51,6 +55,7 @@
     height: 75%;
   }
 }
+
 
 /*** HEADER ***/
 .header-wrapper {
@@ -133,5 +138,30 @@
 @media(max-width: 768px) {
   .particles-canvas {
     display: none;
+  }
+}
+
+/*** ABOUT ME ***/
+.profile-img {
+  width: 25rem;
+  border-radius: 50%;
+  padding: .3rem;
+  border: 1px solid var(--primary-orange);
+}
+
+.about-heading {
+  text-transform: uppercase;
+  color: var(--primary-orange);
+}
+
+
+@media(max-width: 468px) {
+  .profile-img {
+    width: 15rem;
+  }
+  .photo-wrap {
+    display: flex;
+    justify-content: center;
+    align-items:center;
   }
 }
