--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,13 @@ body {
 }
 
 /*** MENU LINKS ***/
-.nav {
-  z-index: 2;
-}
-
 .nav a.nav-link {
   letter-spacing: 0.0375rem;
   cursor: pointer;
+}
+
+.container {
+  z-index: 100;
 }
 
 .nav ul li {
@@ -32,12 +32,15 @@ body {
   color: var(--primary-white) !important;
   border-top:.1875rem solid var(--primary-dark);
   font-family: "Roboto Condensed", sans-serif;
+  z-index: 3;
+  
 }
 
 .navbar-brand {
   max-width: 17.25rem;
   padding: 0 !important;
   height: 6rem !important;
+  z-index: 2
 }
 
 .navbar-nav > li > a.active, .navbar-nav > li > a:focus {
@@ -153,7 +156,6 @@ body {
   text-transform: uppercase;
   color: var(--primary-orange);
 }
-
 
 @media(max-width: 468px) {
   .profile-img {
