--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
 
 :root {
   --primary-white: #fff;
+  --primary-light-grey: #f4f4f4;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255,0);
+  --primary-dark: rgb(52, 58, 64);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
 }
@@ -165,4 +166,56 @@ body {
     justify-content: center;
     align-items:center;
   }
+}
+
+/*** Specialties ***/
+
+.specialties {
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
+}
+
+.specialties h1 {
+  color: var(--primary-dark);
+  text-transform: uppercase;
+}
+
+.specialties .circle {
+  position: relative;
+  margin: 0.375rem auto;
+  background: var(--primary-orange);
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+}
+
+.specialties .icon {
+  font-size: 2rem;
+  color: var(--primary-white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.specialties .box {
+  height: 18rem;
+  border-bottom: .3125rem solid var(--primary-orange);
+  padding: 0.625rem;
+  margin-bottom: 1.875rem;
+  background: var(--primary-white);
+}
+
+.specialties .box:hover {
+  background: var(--primary-orange);
+  border-bottom: .3125rem solid var(--primary-dark);
+}
+
+.specialties .box:hover .icon {
+  color: var(--primary-dark);
+}
+
+.specialties .box:hover .circle {
+  background: var(--primary-white);
 }
